--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /Lab05/build/
 /Lab06/nbproject/private/
 /Lab06/build/
+/JavaApplication1/nbproject/private/
+/JavaApplication1/build/
+/Lab07/nbproject/private/
+/Lab07/build/
