--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@
 /Lab11/nbproject/private/
 /Lab11/build/
 /Lab11/dist/
+/Lab12/nbproject/private/
+/Lab12/build/
+/Lab13/nbproject/private/
+/Lab13/build/
